--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -96,7 +96,7 @@ input, select, textarea {
 		}
 
 	body, input, select, textarea {
-		color: #a2a2a2;
+		color: #5d5d5d;
 		font-family: 'Nunito Sans', sans-serif;, Helvetica, sans-serif;
 		font-size: 16pt;
 		font-weight: 400;
